<resources>
    <string name="app_name">Book Shelf</string>

    <!--    Login Screen-->
    <string name="login_slogan">Hello there, Welcome Back</string>
    <string name="login_title">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="sign_up_login_slogan">New User? Sign Up</string>

    <!--    Registration-->
    <string name="welcome">Welcome</string>
    <string name="sign_up_slogan">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_slogan_sign_up">Already have an account? Log IN</string>

    <!--    Forgot Password-->
    <string name="forget_password">Forget Password</string>
    <string name="forget_password_slogan">Provide your email of your account for which you want to reset your password.</string>
    <string name="next">Next</string>


    <string name="api_key">AIzaSyDgJkwHg_dapNUfF5aOLexcYz1qgSVHVZA</string>

</resources>