<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:gpb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewReg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:transitionName="login_signup_tran"
    tools:context=".activities.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
            android:id="@+id/progressBarRegistration"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            gpb:colors="@array/prog_bar_colors"
            gpb:type="nexus_rotation_cross" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/logo"
            app:lottie_repeatCount="10"
            app:lottie_repeatMode="restart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/academy_filled_3d"
            android:text="@string/welcome"
            android:textColor="@color/cyan"
            android:textSize="40sp"
            android:transitionName="logo_bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/antic_regular"
            android:text="@string/sign_up_slogan"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:transitionName="slogan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:errorIconTint="@color/yellow"
                app:errorTextColor="@color/yellow"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_name"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailRegistration"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:errorIconTint="@color/yellow"
                app:errorTextColor="@color/yellow"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneRegistration"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_no"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:errorIconTint="@color/yellow"
                app:errorTextColor="@color/yellow"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="10dp"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordSignUp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:transitionName="password_tran"
                app:boxStrokeColor="@color/white"
                app:errorIconTint="@color/yellow"
                app:errorTextColor="@color/yellow"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/white"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_bg"
            android:text="@string/sign_up"
            android:textColor="@color/background"
            android:transitionName="btn_tran" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logInBtnSignUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="@string/log_in_slogan_sign_up"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>