<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:gpb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp"
    android:transitionName="login_signup_tran"
    tools:context=".activities.ForgotPassword">

    <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
        android:id="@+id/progress_bar_forgot_pass"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        gpb:colors="@array/prog_bar_colors"
        gpb:type="nexus_rotation_cross" />

    <RelativeLayout
        android:id="@+id/rlForgotPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/logoForgotPass"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/backForgetPass"
            android:layout_centerHorizontal="true"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/logo"
            app:lottie_repeatCount="10"
            app:lottie_repeatMode="restart" />

        <TextView
            android:id="@+id/forgotPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoForgotPass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/techfont"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:transitionName="logo_bottom" />

        <TextView
            android:id="@+id/forgotPasswordSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPasswordTitle"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/el_valle_italica"
            android:text="@string/forget_password_slogan"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            android:transitionName="slogan" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailForgotPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPasswordSlogan"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:errorIconTint="@color/yellow"
            app:errorTextColor="@color/yellow"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailForgotPassword"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_bg"
            android:text="@string/next"
            android:textColor="@color/background"
            android:transitionName="btn_tran" />

    </RelativeLayout>

</RelativeLayout>